Hot Fix WIP project details alignment

--- a/app/css/style.css
+++ b/app/css/style.css
@@ -25,6 +25,3 @@
 }
 
 
-    .swiper-pagination .swiper-pagination-bullets{
-        bottom: 100px !important;
-    }
